fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
     background: hsl(212, 45%, 89%);
     margin: 0;
     font-family: 'Outfit', sans-serif;
+    overflow-y: hidden;
 }
 
 .attribution {
